--- a/netball/templates/server/nedit_fixture.html
+++ b/netball/templates/server/nedit_fixture.html
@@ -68,6 +68,14 @@
           </div>
           <div class="col-md-6">
             <div class="form-group">
+              <label for="{{ form.time.id_for_label }}" class="form-label"
+                >{{form.time.label}}</label
+              >
+              {{form.time}}
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
               <label for="{{ form.team1.id_for_label }}" class="form-label"
                 >{{form.team1.label}}</label
               >
