--- a/football/static/css/fixtures/fixtures.css
+++ b/football/static/css/fixtures/fixtures.css
@@ -14,6 +14,10 @@
   font-weight: bold;
   text-transform: uppercase;
   text-align: center;
+  background-color: red;
+  padding: 10px;
+  color: white;
+  border-radius: 5px;
 }
 .fixtures .table tbody tr td .match-info .venue {
   font-size: 14px;
