--- a/football/static/css/fixtures/fixtures.scss
+++ b/football/static/css/fixtures/fixtures.scss
@@ -16,6 +16,10 @@
             font-weight: bold;
             text-transform: uppercase;
             text-align: center;
+            background-color: red;
+            padding: 10px;
+            color: white;
+            border-radius: 5px;
             .venue {
               font-size: 14px;
             }
