--- a/handball/templates/frontend/handfixtures.html
+++ b/handball/templates/frontend/handfixtures.html
@@ -1,27 +1,71 @@
-{% extends "frontend/handball.html" %}
-
+{% extends "base/base.html" %}
 <!--static-->
 {% load static %}
 <!--title-->
-{% block futitle %}Handball{% endblock futitle %}
+{% block title %}{% block futitle %}{{competition}}{% endblock futitle %}
+<!---->
+{% endblock title %}
 <!--content-->
-{% block futball %}
-<h1>handball fixtures</h1>
-<div class="fixtures">
-  <table class="table table-striped">
-    <tbody>
-      {% for fixture in fixtures %}
-      <tr>
-        <td>
-          {{fixture.team1.school.name|slice:":9" }}
-          <div class="match-info">{{fixture.team1_score}}:{{fixture.team2_score}}</div>
-          {{fixture.team2.school.name|slice:":9" }}
-        </td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-  <div class="fixture"></div>
+{% block content %}
+<div class="sport-content">
+  <div class="content-area flex">
+    <div class="left">
+      <div class="accounts">
+        <h3>Tournaments</h3>
+        <hr />
+        <div class="logs">
+          {% for ntourn in ntourns %}
+          <li>
+            <a href="{%url 'Netball' ntourn.id %}" class="sport-link"
+              >{{ntourn.championship}}|{{ntourn.season}}|{{ntourn.name}}</a
+            >
+          </li>
+          {% endfor %}
+        </div>
+      </div>
+      {% include "base/left.html" %}
+    </div>
+    <div class="lo">
+      <div class="official-list">
+        <table id="myTable" class="display">
+          <thead>
+            <tr>
+              <th>Fixture</th>
+              <th>Home</th>
+              <th>Away</th>
+              <th>Time</th>
+              <th>Date</th>
+
+              <th>Edit</th>
+              <th>Manage</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for fixture in fixures %}
+            <tr>
+              <td>{{ fixture.id }}</td>
+              <td>{{ fixture.team1 }}</td>
+
+              <td>{{ fixture.team2 }}</td>
+              <td>{{ fixture.time}}</td>
+              <td>{{ fixture.date|date:"F j, Y" }}</td>
+
+              <td>
+                <a href="{% url 'update_nfixture' fixture.id%}">Edit</a>
+              </td>
+              <td>
+                <a href="{% url 'nfixture' fixture.id%}">Manage</a>
+              </td>
+            </tr>
+
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <div class="left">{% include "base/right.html" %}</div>
+  </div>
 </div>
 
 {% endblock %}
