--- a/handball/templates/frontend/handfixtures.html
+++ b/handball/templates/frontend/handfixtures.html
@@ -51,10 +51,10 @@
               <td>{{ fixture.date|date:"F j, Y" }}</td>
 
               <td>
-                <a href="{% url 'update_nfixture' fixture.id%}">Edit</a>
+                <a href="{% url 'update_hfixture' fixture.id%}">Edit</a>
               </td>
               <td>
-                <a href="{% url 'nfixture' fixture.id%}">Manage</a>
+                <a href="{% url 'hfixture' fixture.id%}">Manage</a>
               </td>
             </tr>
 
