--- a/basketball3/templates/server/b3tournament.html
+++ b/basketball3/templates/server/b3tournament.html
@@ -103,10 +103,10 @@
               <td>{{ fixture.date|date:"F j, Y" }}</td>
 
               <td>
-                <a href="{% url 'update_nfixture' fixture.id%}">Edit</a>
+                <a href="{% url 'update_b3fixture' fixture.id%}">Edit</a>
               </td>
               <td>
-                <a href="{% url 'nfixture' fixture.id%}">Manage</a>
+                <a href="{% url 'b3fixture' fixture.id%}">Manage</a>
               </td>
             </tr>
 
