--- a/handball/templates/server/htournament.html
+++ b/handball/templates/server/htournament.html
@@ -97,7 +97,10 @@
               <td>{{ fixture.team1 }}</td>
 
               <td>{{ fixture.team2 }}</td>
-              <td>{{ fixture.time}}</td>
+              <td>
+                {{ fixture.time}} | {{ fixture.team1_score}}{{
+                fixture.team2_score}}
+              </td>
               <td>{{ fixture.date|date:"F j, Y" }}</td>
 
               <td>
