--- a/handball/templates/server/htournament.html
+++ b/handball/templates/server/htournament.html
@@ -98,8 +98,9 @@
 
               <td>{{ fixture.team2 }}</td>
               <td>
-                {{ fixture.time}} | {{ fixture.team1_score}}{{
-                fixture.team2_score}}
+                {{ fixture.time}} |
+                <!---->
+                {{ fixture.team1_score}}{{ fixture.team2_score}}
               </td>
               <td>{{ fixture.date|date:"F j, Y" }}</td>
 
