--- a/handball/templates/server/htournament.html
+++ b/handball/templates/server/htournament.html
@@ -100,7 +100,7 @@
               <td>
                 {{ fixture.time}} |
                 <!---->
-                {{ fixture.team1_score}}{{ fixture.team2_score}}
+                {{ fixture.team1_score}}:{{ fixture.team2_score}}
               </td>
               <td>{{ fixture.date|date:"F j, Y" }}</td>
 
