--- a/handball/templates/server/htournament.html
+++ b/handball/templates/server/htournament.html
@@ -120,7 +120,7 @@
     {% comment %} next round {% endcomment %}
     <div class="nextround flex">
       <h1>Next Round Fixtures</h1>
-      <a href="{% url 'generate_next_round_fixtures'%}" class="btn-submit">
+      <a href="{% url 'add_fixture'%}" class="btn-submit">
         Generate Next Fixtures
       </a>
     </div>
