--- a/netball/templates/server/ntournament.html
+++ b/netball/templates/server/ntournament.html
@@ -132,9 +132,9 @@
     </div>
 
     <div class="fixture-custom">
-      <button class="btn-submit" onclick="Creater()">
+      <a href="{%url 'addfixture'%}" class="btn-submit">
         create other fixture
-      </button>
+      </a>
     </div>
   </div>
 
