--- a/volleyball/templates/server/vtournament.html
+++ b/volleyball/templates/server/vtournament.html
@@ -69,9 +69,9 @@
 
   <div class="kiokl">
     <div class="fixture-custom">
-      <button class="btn-submit" onclick="Creater()">
+      <a class="btn btn-success" href="{%url 'addvfixture'%}">
         create other fixture
-      </button>
+      </a>
     </div>
 
     <div class="lo">
