--- a/volleyball/templates/frontend/volleyball.html
+++ b/volleyball/templates/frontend/volleyball.html
@@ -130,7 +130,7 @@
                     {{ fixture.team2.school.name|slice:":9" }}
                   </td>
                   <td>
-                    <div class="match-info">
+                    <div class="match-info flex">
                       {{ fixture.team1_sets_won }}:{{ fixture.team2_sets_won }}
                       ({{ fixture.team1_score }}:{{ fixture.team2_score }})
                     </div>
