--- a/volleyball/templates/frontend/volleyball.html
+++ b/volleyball/templates/frontend/volleyball.html
@@ -104,9 +104,8 @@
           aria-labelledby="nav-home-tab"
         >
           <div class="fixtures">
-            {% regroup results by competition as competition_list %}
-            <!---->
-            {% for competition in competition_list %}
+            {% regroup results by competition as competition_list %} {% for
+            competition in competition_list %}
             <h2>{{ competition.grouper }}</h2>
             <table class="table table-striped">
               <thead>
@@ -114,14 +113,13 @@
                   <th>Teams</th>
                 </tr>
               </thead>
-              {% regroup competition.list by date as date_list %}
-              <!---->
-              {% for date in date_list %}
+              {% regroup competition.list by group as group_list %} {% for group
+              in group_list %}
               <tbody>
                 <tr>
-                  <th colspan="2">{{ date.grouper }}</th>
+                  <th colspan="2">{{ group.grouper }}</th>
                 </tr>
-                {% for fixture in date.list %}
+                {% for fixture in group.list %}
                 <tr>
                   <td>
                     {{ fixture.team1.school.name|slice:":9" }}
