--- a/client/templates/base/navbar.html
+++ b/client/templates/base/navbar.html
@@ -78,7 +78,7 @@
               <a class="dropdown-item" href="{% url 'Ragby15s'%}">Rugby15s</a>
             </li>
             <li><a class="dropdown-item" href="#">Swimming</a></li>
-            <li><a class="dropdown-item" href="#">Hockey</a></li>
+            <li><a class="dropdown-item" href="{% url 'Hockey'%}">Hockey</a></li>
             <li><a class="dropdown-item" href="#">Table Tennis</a></li>
             <li><a class="dropdown-item" href="#">Tennis</a></li>
             <li><a class="dropdown-item" href="#">Beach Soccer</a></li>
