--- a/sports/templates/sport/sports.html
+++ b/sports/templates/sport/sports.html
@@ -77,5 +77,13 @@
       </div>
     </a>
   </div>
+  <div class="card">
+    <a href="{%url 'hockey'%}" class="sport card-body">
+      <div class="icon"><i class="fa fa-futbol"></i></div>
+      <div class="title">
+        <h3>Hockey</h3>
+      </div>
+    </a>
+  </div>
 </div>
 {% endblock %}
