--- a/football/templates/frontend/footfixtures.html
+++ b/football/templates/frontend/footfixtures.html
@@ -51,10 +51,10 @@
               <td>{{ fixture.date|date:"F j, Y" }}</td>
 
               <td>
-                <a href="{% url 'update_nfixture' fixture.id%}">Edit</a>
+                <a href="{% url 'update_fixture' fixture.id%}">Edit</a>
               </td>
               <td>
-                <a href="{% url 'nfixture' fixture.id%}">Manage</a>
+                <a href="{% url 'fixture' fixture.id%}">Manage</a>
               </td>
             </tr>
 
