--- a/football/templates/frontend/footfixtures.html
+++ b/football/templates/frontend/footfixtures.html
@@ -41,7 +41,7 @@
             </tr>
           </thead>
           <tbody>
-            {% for fixture in fixures %}
+            {% for fixture in futfixures %}
             <tr>
               <td>{{ fixture.id }}</td>
               <td>{{ fixture.team1 }}</td>
